examples/invalid/semanticErr/pairs/pairTypeError.wacc
# Incompatible pair type

# Output:
# #semantic_error#

# Exit:
# 200

# Program:

begin
  pair(int, int) p = newpair(1,'a')
end

